# jastd

./: .gitignore  CMakeLists.txt  README.md  main.cpp
UnitTesters/: UnitTesters.cpp  UnitTesters.hpp
libjastd/includes/: macros.h  macros.hpp  string.h  string.hpp
libjastd/src/: macros.cpp  string.cpp  string.tpp
unit_test/: unit_test.cpp  unit_test.h  unit_test.hpp
